<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Soil Finder</string>
    <string name="action_gps">GPS Location</string>
    <string name="action_accuracy">Change Accuracy</string>
    <string name="action_search">Search</string>
    <string name="action_query">Query by Series</string>
    <string name="action_coordinates">Search by Coordinates</string>
    <string name="action_about">About</string>
    <string name="accuracy_prefix">Accuracy is\u0020</string>
    <string name="accuracy_suffix">\u0020meters</string>
    <string name="loading_message">Loading soil profile\u2026</string>
    <string name="getting_location">Getting location\u2026</string>
    <string name="slider_header">Select Accuracy</string>
    <string name="slider_message">Minimum GPS accuracy in meters</string>
    <string name="current_accuracy_prefix">Current accuracy:\u0020</string>
    <string name="current_accuracy_suffix">\u0020meters</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="slider_var_text">Accuracy in meters: </string>
    <string name="soil_series_name">Enter Soil Series Name</string>
    <string name="example_profile">Loading soil profile for Plymouth County, MA</string>
    <string name="location_name">Search by Location</string>
    <string name="loading_location">Loading location...</string>
    <string name="query_coordinates">Enter Coordinates</string>
    <string name="too_few_commas">Error: Please enter two coordinates.</string>
    <string name="too_many_commas">Error: Too many commas.</string>
    <string name="invalid_commas">Error: Coordinates can not begin or end with a comma.</string>
    <string name="coords_message">Input coordinates as comma-separated pair (ex: -123.07,45.083)</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="invalid_coordinate">Invalid coordinates.</string>
    <string name="settings_text">Test string</string>
    <string name="pref_header_notifications">missing value</string>
</resources>
